# aiogguf

./: Cargo.toml  README.md
src/: error.rs  header.rs  lib.rs  metadata.rs  tensor.rs  tests.rs  types.rs
